# mcp-mind-palace

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  run_server.py
app/: config.py  main.py
app/knowledge_management/: chunking.py  embedder.py  markdown_parser.py  synchronization.py
app/prompts/: __init__.py  knowledge_management_prompt.py  knowledge_retrieval_prompt.py
app/resources/: __init__.py  knowledge_resources.py
app/tools/: __init__.py  proposals.py  search.py
docs/tools/: mcp_tools_analysis.md
knowledge_base/active/: .sync_state.json
knowledge_base/active/docker/: docker-compose-persistent-1745223945.md
knowledge_base/active/python-best-practices/: python-error-handling.md  python-testing.md  python-type-hints.md
knowledge_base/active/uv/: uv-create-python-packages.md
scripts/: agent_mcp_demo.py  force_update_embeddings.py
tests/: README.md  conftest.py
tests/integration/: test_chroma_integration.py  test_embedder_integration.py  test_filesystem_integration.py  test_lifecycle_integration.py  test_proposals_integration.py  test_synchronization_integration.py  test_tools_integration.py
tests/mcp/: README.md  test_error_handling.py  test_knowledge_sync.py  test_server.py  test_tool_registration.py
tests/unit/knowledge_management/: test_chunking.py  test_chunking_real.py  test_embedder.py  test_markdown_parser.py  test_synchronization.py
tests/unit/tools/: test_proposals.py  test_search.py  test_search_real.py
