[project]
name = "mcp-mind-palace"
version = "0.1.0"
description = "Model Context Protocol Server for Markdown-Based Knowledge Management"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "chromadb>=1.0.5",
    "fastmcp>=2.2.0",
    "markdown>=3.8",
    "openai>=1.75.0",
    "pydantic-ai-slim[mcp]>=0.1.3",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "watchdog>=6.0.0",
    "logfire>=3.14.0",
    "tiktoken>=0.9.0",
    "numpy>=2.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
